# lagerverwaltung-buchhandlung

./: .gitignore  CHECKLISTE.md  GIT_WORKFLOW.md  INDEX.md  README.md  TEMPLATE_INFO.md  docker-compose.yml  pyproject.toml
data/: db.sql
docs/: DATACLASS_ERKLAERT.md  architecture.md  changelog_Kaufmann.md  changelog_houman.md  changelog_kattner.md  contracts.md  datetime_migration_plan.md  known_issues.md  retrospective.md  tests.md
src1/: README_src1.md
src1/backend/: .dockerignore  .env.example  Dockerfile  README.md  buchhandlung.db  pyproject.toml
src1/backend/app/: __init__.py  main.py
src1/backend/app/adapters/: __init__.py  mappers.py  schema_mappers.py  sqlalchemy_repositories.py
src1/backend/app/api/: __init__.py  activity.py  auth.py  books.py  commerce.py  deps.py  inventory.py  suppliers.py
src1/backend/app/contracts/: __init__.py  repositories.py
src1/backend/app/core/: auth.py  auth_staff.py  auth_tokens.py  bootstrap.py  config.py  errors.py  exceptions.py  location_search.py  migrations.py  time.py
src1/backend/app/db/: __init__.py  buchhadlung.sql  buchhandlung.sql  models.py  models_auth.py  models_commerce.py  schemas.py  schemas_auth.py  schemas_commerce.py  session.py
src1/backend/app/domain/: models.py
src1/backend/app/services/: __init__.py  activity_log.py  books.py  commerce.py  inventory.py  suppliers.py  test_data.py
src1/backend/tests/: test_location_search.py  test_ports_adapters_flow.py  test_sqlite_schema.py
src1/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+28 files in other folders)
