[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buchhandlungsverwaltung-backend"
version = "0.1.0"
description = "FastAPI-Backend für die Buchhandlungsverwaltung (Schulprojekt)"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg2-binary",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]


